Finishes all the content
Lord. and I'm sorry about these awful huge images - I'm a bad person.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section>
-        <img src="static/images/seal.png" id="seal" alt="seal of the city and county of corvus marinus">
+        <img src="static/images/seal.png" class="seal" alt="seal of the city and county of corvus marinus">
         <div class="section-container">
             <div class="col-2">
                 <h3>Capital of the Empire</h3>
@@ -36,9 +36,9 @@
             <li><a href="#top">Home</a></li>
             <li><a href="#cormorant">Dedication</a></li>
             <li><a href="#mayor">Mayor's office</a></li>
-            <li><a href="">Visitors</a></li>
-            <li><a href="">Businesses</a></li>
-            <li><a href="library.html">Public Library</a></li>
+            <li><a href="#visitors">Visitors</a></li>
+            <li><a href="#businesses">Businesses</a></li>
+            <li><a href="#library">Public Library</a></li>
         </ul>
         <div class="section-container">
             <div class="col-1 shaded">
@@ -67,6 +67,75 @@
                 <img src="static/images/mayoral-signature.png">
             </div>
         </div>
+    </section>
+
+    <section id="visitors">
+        <div class="section-container">
+            <div class="col-1 extra-shaded">
+                <h3>Sights &amp; Recreation</h3>
+                <p>Pictured here, the Sutro Baths have been a destination since 1896. Facilities include swimming in fresh and salt water pools, a 3,700 seat ampitheter, ice skating, and a museum of local history.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="businesses">
+    </section>
+
+    <section id="library">
+        <div class="section-container">
+            <div class="col-2 shaded">
+                <h3>Sutro Library</h3>
+                <p>The central branch at Ocean Beach gives readers a stunning ocean view, as well as an extensive collection of reading material.</p>
+            </div>
+            <div class="col-2 shaded">
+                <h3>Online Catalogue</h3>
+                <p>Browse books online, view up-to-date hours and loctions, and manage your membership.<br>
+                <em><a href="library.html">Try it now</a></em></p>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="section-container">
+            <div class="col-3">
+                <h3>Residents</h3>
+                <ul>
+                    <li><span>Emergency and Safety</span></li>
+                    <li><span>Environment</span></li>
+                    <li><span>Health and Social Services</span></li>
+                    <li><span>Utilities and Housing</span></li>
+                    <li><span>Legal Information</span></li>
+                    <li><span>Taxes</span></li>
+                    <li><span>Transportation</span></li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <h3>Business</h3>
+                <ul>
+                    <li><span>Licensing and Permits<li>
+                    <li><span>Bids and Contracts Database</span></li>
+                    <li><span>Health Case Reform</span></li>
+                    <li><span>Small Business Assistance Center</span></li>
+                    <li><span>Building Inspection Department</span></li>
+                    <li><span>Office of the Treasurey</span></li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <h3>Government</h3>
+                <ul>
+                    <li><span>City and County Holidays</span></li>
+                    <li><span>Claim Forms</span></li>
+                    <li><span>Corvus Marinus Municipal Codes</span></li>
+                    <li><span>City Jobs</span></li>
+                    <li><span>Board of Supervisors</span></li>
+                    <li><span>Departments and Agencies</span></li>
+                    <li><span>City Hall</span></li>
+                    <li><span>Superior Courts</span></li>
+                </ul>
+            </div>
+        </div>
+        <img src="static/images/seal.png" class="seal" alt="Seal of the City and County of Corvus Marinus">
+    </section>
 </body>
 </html>
 
