Fixes mayor's note and seal styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-2"></div>
             <div class="col-2 shaded">
                 <h3>Mayor Edwin M. Lee</h3>
-                <p>I am honored to serve as your 43rd Mayor of San Francisco, a world renowned international City that celebrates diversity and leads the way in job creation, innovation, education, healthcare, and the environment for our future generations.</p>
+                <p>I am honored to serve as your 43rd Mayor of Corvus Marinus, a world renowned international City that celebrates diversity and leads the way in job creation, innovation, education, healthcare, and the environment for our future generations.</p>
                 <img src="static/images/mayoral-signature.png">
             </div>
         </div>
