Fixes and properly scales background images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>The city of Corvus Marinus</title>
+    <link type="text/css" rel="stylesheet" href="static/styles/type.css">
     <link type="text/css" rel="stylesheet" href="static/styles/format.css">
 
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
