Adds businesses section
Also makes each section bigger

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
     </section>
 
     <section id="businesses">
+        <div class="section-container">
+            <div class="col-2 shaded">
+                <h3>Businesses</h3>
+                <p>
+                Corvus Marinus has a vibrant and successful business community, made of thriving companies both large and small. The City of Corvus Marinus offers a range of resources to businesses including incentives, training, programs and access to capital.
+                </p>
+            </div>
+            <div class="col-2"></div>
+        </div>
     </section>
 
     <section id="library">
