--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="banner-container"><div class="banner">&nbsp;</div></div>
+    <div class="banner-container" id="top"><div class="banner">&nbsp;</div></div>
     <header>
         <p><span class="header-decoration">the city of</span></p>
         <h1>Corvus Marinus</h1>
