Adds more images

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 </head>
 
 <body>
-    <div class="banner-container" id="top"><div class="banner">&nbsp;</div></div>
+    <div class="banner-container" id="top"><div class="banner">
+        <img src="static/images/scroll.png" alt="scroll down" id="scroll">
+    </div></div>
     <header>
         <p><span class="header-decoration">the city of</span></p>
         <h1>Corvus Marinus</h1>
     </header>
 
+    <section id="bridge"></section>
     <section>
         <img src="static/images/seal.png" class="seal" alt="seal of the city and county of corvus marinus">
         <div class="section-container">
