Adds library stub, tidies up css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>The city of Corvus Marinus</title>
     <link type="text/css" rel="stylesheet" href="static/styles/type.css">
     <link type="text/css" rel="stylesheet" href="static/styles/format.css">
+    <link type="text/css" rel="stylesheet" href="static/styles/index.css">
 
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="static/scripts/external/jquery-scrolltofixed-min.js"></script>
@@ -113,7 +114,7 @@
             <div class="col-2 shaded">
                 <h3>Online Catalogue</h3>
                 <p>Browse books online, view up-to-date hours and loctions, and manage your membership.<br>
-                <em><a href="library.html">Try it now</a></em></p>
+                <em><a href="library">Try it now</a></em></p>
             </div>
         </div>
     </section>
