Adds twitter links, trackers for wiki

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <li><span>Legal Information</span></li>
                     <li><span>Taxes</span></li>
                     <li><span>Transportation</span></li>
+                    <li><a href="https://twitter.com/cmcitygov" target="_blank">CM on twitter</a></li>
                 </ul>
             </div>
             <div class="col-3">
